--- a/ovgraphbuild/CMakeLists.txt
+++ b/ovgraphbuild/CMakeLists.txt
@@ -25,7 +25,8 @@ if (ZLIB_FOUND)
     target_link_libraries (ovgraphbuild ${ZLIB_LIBRARIES})
 endif ()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 #set_property(TARGET ovgraphbuild PROPERTY CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE Release)
