--- a/ovgraphbuild/CMakeLists.txt
+++ b/ovgraphbuild/CMakeLists.txt
@@ -25,6 +25,12 @@ if (ZLIB_FOUND)
     target_link_libraries (ovgraphbuild ${ZLIB_LIBRARIES})
 endif ()
 
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
