Added vsearch submodule to replace sumaclust

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "componentsearch"]
 	path = componentsearch
 	url = https://github.com/ppericard/ComponentSearch.git
+[submodule "vsearch"]
+	path = vsearch
+	url = https://github.com/torognes/vsearch.git
