--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "sumaclust"]
 	path = sumaclust
 	url = https://git.metabarcoding.org/obitools/sumaclust.git
+[submodule "componentsearch"]
+	path = componentsearch
+	url = https://github.com/bonsai-team/ComponentSearch2.git
