--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install:
   - while kill -0 $pid 2> /dev/null;  do sleep 1; done;
 
 script:
-  - python -m pytest -s
+  - travis_wait 30 python -m pytest -s
