--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: bionic
 sudo: required
 
 before_install:
-  - ./travis_download_db.sh & pid=$!
+  # - ./travis_download_db.sh & pid=$!
   - free -m
 
 
@@ -19,7 +19,7 @@ install:
   - source activate matam
   - ./build.py
   # Wait until the db is dowloaded
-  - while kill -0 $pid 2> /dev/null;  do sleep 1; done;
+  # - while kill -0 $pid 2> /dev/null;  do sleep 1; done;
 
 script:
-  - travis_wait 30 python -m pytest -s
+  - python -m pytest -s
