--- a/environment.yml
+++ b/environment.yml
@@ -21,7 +21,7 @@ dependencies:
   - git
   - python >=3.5
   - numpy
-  - samtools==1.9=h8571acd_11 # samtools libcrypto.so.1.0.0 error (https://github.com/sunbeam-labs/sunbeam/issues/181)
+  - samtools
   - sga
   - sortmerna
   - vsearch
