Fix sortmerna conda version. Fixed #100

--- a/environment.yml
+++ b/environment.yml
@@ -23,7 +23,7 @@ dependencies:
   - numpy
   - samtools==1.9=h8571acd_11 # samtools libcrypto.so.1.0.0 error (https://github.com/sunbeam-labs/sunbeam/issues/181)
   - sga
-  - sortmerna
+  - sortmerna==2.1b
   - vsearch
   - rdptools
   - krona
